src/snapshots/keyhole__ui__tests__browser_amqp.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 24)"
---
┌ Destinations ─────────────────────────────┐┌ queue:orders · 2 msgs ────────────────────┐
│  Destination                      Kind    ││▶ 00:00:00.000  orders             order #1│
│▶ orders                           [queue] ││  00:00:00.000  orders             {"id":2}│
│  alerts                           [topic] ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           │└───────────────────────────────────────────┘
│                                           │┌ message 1/2 ──────────────────────────────┐
│                                           ││order #1                                   │
│                                           ││                                           │
│                                           ││── metadata ──                             │
│                                           ││received: 00:00:00.000                     │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
┌ Tail ──────────────────────────────────────────────────────────────────────────────────┐
│topic:name or queue:name:                                                               │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│Enter tails it · topic = live multicast · queue = non-destructive browse                │
└────────────────────────────────────────────────────────────────────────────────────────┘
 a add · x remove · t tail · P publish · Tab tails · : palette · ? help
