src/snapshots/keyhole__ui__tests__browser_amqp_message_detail.snap
---
source: src/ui.rs
assertion_line: 2022
expression: "render_lines(&mut app, 90, 24)"
---
┌ Destinations ─────────────────────────────┐┌ queue:orders · message 2/2 ───────────────┐
│  Destination                      Kind    ││received: 00:00:00.000                     │
│▶ orders                           [queue] ││id: m-42                                   │
│  alerts                           [topic] ││content-type: application/json             │
│                                           ││app.region: eu                             │
│                                           ││                                           │
│                                           ││── body ──                                 │
│                                           ││{                                          │
│                                           ││  "id": 2                                  │
│                                           ││}                                          │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
┌ Tail ──────────────────────────────────────────────────────────────────────────────────┐
│topic:name or queue:name:                                                               │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│Enter tails it · topic = live multicast · queue = non-destructive browse                │
└────────────────────────────────────────────────────────────────────────────────────────┘
 ↑↓ scroll · Esc/← list · : palette · ? help
