src/snapshots/keyhole__ui__tests__browser_amqp_message_preview.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 24)"
---
┌ Destinations ─────────────────────────────┐┌ queue:orders · 2 msgs ────────────────────┐
│  Destination                      Kind    ││  00:00:00.000  orders             order #1│
│▶ orders                           [queue] ││▶ 00:00:00.000  orders             m-42 {"i│
│  alerts                           [topic] ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           │└───────────────────────────────────────────┘
│                                           │┌ message 2/2 ──────────────────────────────┐
│                                           ││{                                          │
│                                           ││  "id": 2                                  │
│                                           ││}                                          │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
┌ Tail ──────────────────────────────────────────────────────────────────────────────────┐
│topic:name or queue:name:                                                               │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│Enter tails it · topic = live multicast · queue = non-destructive browse                │
└────────────────────────────────────────────────────────────────────────────────────────┘
 ↑↓ messages · / filter · P publish · Ctrl-← destinations · Tab/Ctrl-↓ tails · : palette ·
