src/snapshots/keyhole__ui__tests__browser_panel_keyspace_notice.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 26)"
---
┌ Server  ● connected ───────────────────────────────────────────────────────────────────┐
│ prod · 127.0.0.1:6379 · db0                                                            │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ Keys ─────────────────────────────────────┐┌ Value ────────────────────────────────────┐
│  Key             Type    TTL       Size   ││Select a key to inspect its value.         │
│▶ ▾ user (1)                               ││                                           │
│    1             string  2m 0s     128 B  ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
┌ Details │ Console │ Monitor │ Keyspace │ Pub/Sub │ Tail ───────────────────────────────┐
│ live · 0 events                                                                        │
│⚠ keyspace notifications are disabled (notify-keyspace-events is empty)                 │
│                                                                                        │
│waiting for events…                                                                     │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
 ↑↓ keys · [ ] db · ⏎/Space collapse · z all · / filter · o sort name↑ · O dir · Tab/Ctrl-
