src/snapshots/keyhole__ui__tests__browser_panel_tail_recording.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 26)"
---
┌ Server  ● connected ───────────────────────────────────────────────────────────────────┐
│ prod · 127.0.0.1:6379 · db0                                                            │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ Keys ─────────────────────────────────────┐┌ Value ────────────────────────────────────┐
│  Key             Type    TTL       Size   ││Select a key to inspect its value.         │
│▶ ▾ user (1)                               ││                                           │
│    1             string  2m 0s     128 B  ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
┌ Details │ Console │ Monitor │ Keyspace │ Pub/Sub │ pubsub:orders ● │ Tail ─────────────┐
│ paused · 6 events                                                    ● REC 6 (4.0 KiB) │
│12:34:56.000  orders             event 0                                                │
│12:34:56.000  orders             event 1                                                │
│12:34:56.000  orders             event 2                                                │
│12:34:56.000  orders             event 3                                                │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
 ↑↓ keys · ⏎/Space collapse · z all · / filter · o sort name↑ · O dir · Tab/Ctrl-↓ panel ·
