src/snapshots/keyhole__ui__tests__browser_server_details.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 36)"
---
┌ Server  ● connected ───────────────────────────────────────────────────────────────────┐
│ prod · 127.0.0.1:6379 · db0                                                            │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ Keys ─────────────────────────────────────┐┌ Value ────────────────────────────────────┐
│  Key             Type    TTL       Size   ││Select a key to inspect its value.         │
│▶ ▾ user (1)                               ││                                           │
│    1             string  2m 0s     128 B  ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
┌ Details │ Console │ Monitor │ Keyspace │ Pub/Sub │ Tail ───────────────────────────────┐
│ v7.4.0 · up 1h 1m 1s · 7/10000 clients · mem 1.0 MiB / 4.0 MiB · hit 90.0%             │
│ standalone · master · 2 replicas · 412 keys · 120.3k cmds · 42 expired · 0 evicted     │
│ frag 1.42 · allkeys-lru · rdb ok · 1.3k unsaved · 1 blocked · 3 rejected               │
│                                                                                        │
│ Ops/sec 31 · peak 31                           Clients (4)                             │
│     ▃▁▅█                                       Name   Addr          Idle Cmd           │
│ ▁▂▄▇████                                       web-1  10.0.0.2:5051 0s   get           │
│ Net 12.0 KiB/s in · 4.0 KiB/s out              —      10.0.0.9:6210 2s   subscribe     │
│      ▃ █                                       cron   10.0.0.3:4410 1h   client|list   │
│ ▁▂▄█▅███                                       —      10.0.0.7:7001 45s  —             │
└────────────────────────────────────────────────────────────────────────────────────────┘
 Enter fold · z all · / filter · oO sort · Tab panel · : palette · ? help
