src/snapshots/keyhole__ui__tests__browser_with_console.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 24)"
---
┌ Server  ● connected ───────────────────────────────────────────────────────────────────┐
│ prod · 127.0.0.1:6379 · db0                                                            │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ Keys ─────────────────────────────────────┐┌ Value ────────────────────────────────────┐
│  Key             Type    TTL       Size   ││Select a key to inspect its value.         │
│▶ ▾ session (1)                            ││                                           │
│    abc           hash    2m 0s     128 B  ││                                           │
│  ▾ user (1)                               ││                                           │
│    1             string  2m 0s     128 B  ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
┌ Details │ Console │ Monitor │ Keyspace │ Pub/Sub │ Tail ───────────────────────────────┐
│uptime_in_seconds:42                                                                    │
│                                                                                        │
│❯ SET k v                                                                               │
│`SET` is not on the read-only allowlist                                                 │
│                                                                                        │
│❯                                                                                       │
└────────────────────────────────────────────────────────────────────────────────────────┘
 ↑↓→ nav · z all · / filter · oO sort · Tab/Ctrl-↓ panel · : palette · ? help · Esc back
