src/snapshots/keyhole__ui__tests__command_palette.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 16)"
---
┌ Connections │ Recordings ──────────────────────────────────────────────────────────────┐
│                                                                                        │
│                                  No saved connections.                                 │
│                                                                                        │
│                                  Press 'a' to add one.                                 │
│                                                                                        │
│                        ┌ Command palette ─────────────────────┐                        │
│                        │▶ Settings page                       │                        │
│                        └──────────────────────────────────────┘                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
 Enter connect · a add · Tab recordings · : palette · ? help
