src/snapshots/keyhole__ui__tests__connections_empty.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 16)"
---
┌ Connections │ Recordings ──────────────────────────────────────────────────────────────┐
│                                                                                        │
│                                  No saved connections.                                 │
│                                                                                        │
│                                  Press 'a' to add one.                                 │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
 ↑↓ move · Enter connect · a add · Tab recordings · : palette · ? help · Esc Esc quit
