src/snapshots/keyhole__ui__tests__connections_populated.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 120, 12)"
---
 no connection  · connections                                                                  ○ offline   12:34:56 UTC
┌ Connections │ Recordings ────────────────────────────────────────────────────────────────────────────────────────────┐
│     NAME                KIND      ENDPOINT                    INFO                                                   │
│▶ ●  cache               redis     admin@127.0.0.1:6379        v7.4.0 · 49 keys · 7 clients · 120 ops/s · 1.0 MiB     │
│  ○  events              amqp      broker:5671 tls             offline                                                │
│  ○  rabbit              rabbitmq  rabbit:5672/prod            offline                                                │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  nav ↑↓ move │ conn Enter connect · a add │ tabs Tab recordings │ go b browser │ app ? help · Esc Esc quit
