src/snapshots/keyhole__ui__tests__help_overlay.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 32)"
---
 Keyhole   n┌ Help ──────────────────────────────────────────────────────────┐2:34:56 UTC
┌ Connection│Navigation                                                      │───────────┐
│           │  ↑/k ↓/j move   g/G top/bottom   Ctrl-u/d page   mouse wheel sc│           │
│           │  Enter connect (Connections)   Esc step back / quit            │           │
│           │                                                                │           │
│           │Screens                                                         │           │
│           │  c connections  b browser  R recordings                        │           │
│           │                                                                │           │
│           │Browser                                                         │           │
│           │  server stats (Redis) appear in a band above the panes         │           │
│           │  / filter   [ ] change DB   r refresh (keys auto-refresh)      │           │
│           │  o sort column   O direction                                   │           │
│           │  keys are always grouped by prefix into collapsible sections   │           │
│           │  Enter/Space collapse/expand group (from header or key)        │           │
│           │  z fold/unfold all groups                                      │           │
│           │  PgUp/PgDn (or Ctrl-u/d) scroll the value pane                 │           │
│           │                                                                │           │
│           │Bottom panel (Redis)                                            │           │
│           │  a tabbed panel along the bottom: Console first, then one tab p│           │
│           │  Tab / Shift-Tab cycle the tabs                                │           │
│           │  s subscribe (pub/sub or stream)   m MONITOR   K keyspace      │           │
│           │  t tail the selected stream key    x stop the focused tail     │           │
│           │  r records on a tail tab (refreshes keys on the Console tab)   │           │
│           │  spec: pubsub:ch · psub:ch.* · stream:key · keyspace[:N] · moni│           │
│           │                                                                │           │
│           │Console tab (read-only)                                         │           │
│           │  i type a command   Enter run   ↑↓ history   PgUp/PgDn scroll  │           │
│           │  Ctrl-L clear   writes and admin commands are refused          │           │
│           │                                                                │           │
│           │General                                                         │           │
└───────────│  a add connection   ? toggle help   Esc back   Ctrl-c quit     │───────────┘
  nav ↑↓ mov└────────────────────────────────────────────────────────────────┘c Esc quit
